src/test/deca/codegen/invalid/invalid_format_int_insuffisance.deca
// Test parser, invalid int format avec debordement

{
    int x = -2147483648;
    x = x - 1;
    println(x);
}